# BetrockPlusPlus

./: .clang-format_dont_use_yet  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
include/: nbt.h
src/: main.cpp
src/bpp_client/: assets.cpp  assets.h  client.cpp  client.h  glfw_context.h  inputs.cpp  inputs.h  integrated_server.h  window.h
src/bpp_client/renderers/: shader_program.cpp  shader_program.h  sub_chunk.cpp  sub_chunk.h  sub_chunk_mesher.cpp  sub_chunk_mesher.h  world_renderer.cpp  world_renderer.h
src/bpp_client/renderers/blocks/: context.h  faces.h
src/bpp_client/renderers/shaders/: world.h
src/bpp_server/: block_behvaior_overrides.h  chunk_sender.h  chunk_serializer.h  handle_packet.h  player_session.h  server.cpp  server.h
src/bpp_server/commands/: command.cpp  command.h  command_manager.cpp  command_manager.h
src/bpp_shared/: base_structs.h  base_types.h  constants.h  debug.h  game_runtime.cpp  game_runtime.h  numeric_structs.h  server_interface.h
src/bpp_shared/NBT/: NBT.h  example.h
src/bpp_shared/blocks/: BlockProperties.cpp  BlockProperties.h  Material.h  block_properties.cpp  block_properties.h
src/bpp_shared/config/: cli_args.cpp  cli_args.h  config.cpp  config.h
src/bpp_shared/entities/: entity.h
src/bpp_shared/enums/: animations.h  biomes.cpp  biomes.h  blocks.h  dimensions.h  directions.h  drops.cpp  drops.h  items.cpp  items.h  labels.cpp  labels.h  packets.h  sounds.h
src/bpp_shared/enums/network/: animation_ids.h  block_interaction.h  face_directions.h  mine_status.h  packet_data.h  packet_ids.h  world_event_ids.h
src/bpp_shared/helpers/: AABB.h  byteswap_compat.h  cross_platform.h  file_handle.h  platforms.h
src/bpp_shared/helpers/java/: java_math.h  java_random.h
src/bpp_shared/inventory/: inventories.h  inventory.h  inventory_interaction.h
src/bpp_shared/logger/: logger.cpp  logger.h  loglevel.h  logstream.cpp  logstream.h  style.cpp  style.h
src/bpp_shared/nbt/: example.h  nbt.h
src/bpp_shared/networking/: network_stream.cpp  network_stream.h  packet_staging_buffer.cpp  packets.h  server_manager.cpp  server_manager.h
src/bpp_shared/strings/: labels.cpp  labels.h
src/bpp_shared/tile_entities/: tile_entity.h  tile_entity_manager.h
src/bpp_shared/world/: ChunkGenerator.h  ChunkSerializer.h  ClientPos.h  World.cpp  World.h  chunk.h  client_pos.h  lighter.cpp  lighter.h  save_manager.h  world.cpp  world.h
src/bpp_shared/world/debug_generator/: debug_generator.h
src/bpp_shared/world/generator/: biome_gen.cpp  biome_gen.h  cave_gen.cpp  cave_gen.h  chunk_gen.cpp  chunk_gen.h  feature_gen.cpp  feature_gen.h  generator.cpp  generator.h  tree_gen.cpp  tree_gen.h
src/bpp_shared/world/generator/nether/: chunk_gen.cpp  chunk_gen.h
src/bpp_shared/world/generator/overworld/: biome_gen.cpp  biome_gen.h  cave_gen.cpp  cave_gen.h  chunk_gen.cpp  chunk_gen.h  feature_gen.h  tree_gen.cpp  tree_gen.h
src/bpp_shared/world/generator/shared/: cave_gen.cpp  feature_gen.cpp
src/bpp_shared/world/noise/: noise_generator.cpp  noise_generator.h  noise_octaves.h  noise_octaves_simplex.h  noise_perlin.cpp  noise_perlin.h  noise_simplex.cpp  noise_simplex.h
src/bpp_shared/world/storage/: region.cpp  region.h  region_manager.h  save_manager.cpp  save_manager.h
src/bpp_test/: network_test.cpp  network_test.h
src/bpp_utilities/: utilities.h
